src/kubernetes/apps/auth/authentik/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - id.${DOMAIN}
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
